@@ -1,3 +1,4 @@
+
 # Copyright 2006 James Tauber and contributors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -11,9 +12,6 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-#from pyjamas.__pyjamas__ import JS
-
 
 def init():
     JS("""
