@@ -3,7 +3,7 @@
 
 import sys
 if sys.platform not in ['mozilla', 'ie6', 'opera', 'oldmoz', 'safari']:
-    from pyjamas.__pyjamas__ import get_main_frame
+    from __pyjamas__ import get_main_frame
     from pyjamas import Cookies
 else:
     from __pyjamas__ import JS
