@@ -11,7 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-from pyjamas.__pyjamas__ import console
+from __pyjamas__ import console
 from pyjamas import DOM
 
 from pyjamas.ui.CellPanel import CellPanel
